refator: refator creator/pages

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,23 +1,6 @@
-//? vuetify
-// .v-pagination__list {
-//   overflow: scroll;
-// }
-.v-input--density-compact .v-field__input {
-  font-size: .9rem;
-}
-::-webkit-scrollbar {
-  display: none
-}
-
-
-
-.preview {
-  -ms-overflow-style: none;  /* Internet Explorer 10+ */
-  scrollbar-width: none;  /* Firefox */
-}
-.preview::-webkit-scrollbar {
-  display: none;  /* Safari and Chrome */
-}
+@import './defaults';
+@import './gap';
+@import './vuetify';
 
 //? custom component styles
 //TODO:
