--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,6 +1,8 @@
 @import './defaults';
 @import './gap';
+@import './flex';
 @import './vuetify';
+@import './cursor';
 
 //? custom component styles
 //TODO:
@@ -14,7 +16,10 @@ $border-size: 4px;
   border-left: $border-size solid rgba(255, 255, 113, 0.5);
   overflow: hidden;
 
-  .top, .right, .bottom, .left {
+  .top,
+  .right,
+  .bottom,
+  .left {
     position: absolute;
     border-radius: 100vmax;
   }
@@ -24,24 +29,20 @@ $border-size: 4px;
     left: 0;
     width: 0;
     height: 5px;
-    background: linear-gradient(
-      90deg,
-      transparent 50%,
-      rgba(255, 49, 49, 0.5),
-      rgb(255, 49, 49)
-    );
+    background: linear-gradient(90deg,
+        transparent 50%,
+        rgba(255, 49, 49, 0.5),
+        rgb(255, 49, 49));
   }
 
   .bottom {
     right: 0;
     bottom: 0;
     height: 5px;
-    background: linear-gradient(
-      90deg,
-      rgb(57, 255, 20),
-      rgba(57, 255, 20, 0.5),
-      transparent 50%
-    );
+    background: linear-gradient(90deg,
+        rgb(57, 255, 20),
+        rgba(57, 255, 20, 0.5),
+        transparent 50%);
   }
 
   .right {
@@ -49,12 +50,10 @@ $border-size: 4px;
     right: 0;
     width: 5px;
     height: 0;
-    background: linear-gradient(
-      180deg,
-      transparent 30%,
-      rgba(0, 255, 255, 0.5),
-      rgb(0, 255, 255)
-    );
+    background: linear-gradient(180deg,
+        transparent 30%,
+        rgba(0, 255, 255, 0.5),
+        rgb(0, 255, 255));
   }
 
   .left {
@@ -62,12 +61,10 @@ $border-size: 4px;
     bottom: 0;
     width: 5px;
     height: 0;
-    background: linear-gradient(
-      180deg,
-      rgb(255, 255, 113),
-      rgba(255, 255, 113, 0.5),
-      transparent 70%
-    );
+    background: linear-gradient(180deg,
+        rgb(255, 255, 113),
+        rgba(255, 255, 113, 0.5),
+        transparent 70%);
   }
 
   .top {
@@ -101,6 +98,7 @@ $border-size: 4px;
 }
 
 @keyframes animateBottom {
+
   0%,
   50% {
     opacity: 0;
@@ -119,6 +117,7 @@ $border-size: 4px;
 }
 
 @keyframes animateRight {
+
   0%,
   25% {
     opacity: 0;
@@ -138,6 +137,7 @@ $border-size: 4px;
 }
 
 @keyframes animateLeft {
+
   0%,
   75% {
     opacity: 0;
